plugins/kotlin/idea/tests/testData/multiplatform/duplicateExpectsImplicit/bottom/bottom.kt
actual class <!LINE_MARKER("descr='Has expects in left module'")!>A<!>
